--- a/public/output.css
+++ b/public/output.css
@@ -34,7 +34,7 @@ html {
   -moz-tab-size: 4; /* 3 */
   -o-tab-size: 4;
      tab-size: 4; /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
+  font-family: PT Sans, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
   font-feature-settings: normal; /* 5 */
   font-variation-settings: normal; /* 6 */
 }
@@ -488,6 +488,12 @@ video {
 .container {
   width: 100%;
 }
+@media (min-width: 365px) {
+
+  .container {
+    max-width: 365px;
+  }
+}
 @media (min-width: 640px) {
 
   .container {
@@ -512,14 +518,49 @@ video {
     max-width: 1280px;
   }
 }
-@media (min-width: 1536px) {
-
-  .container {
-    max-width: 1536px;
-  }
-}
 .m-auto {
   margin: auto;
+}
+.my-\[81px\] {
+  margin-top: 81px;
+  margin-bottom: 81px;
+}
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+.mt-10 {
+  margin-top: 2.5rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.mt-\[169px\] {
+  margin-top: 169px;
+}
+.mt-\[22px\] {
+  margin-top: 22px;
+}
+.mt-\[81px\] {
+  margin-top: 81px;
+}
+.mt-8 {
+  margin-top: 2rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.mb-3\.5 {
+  margin-bottom: 0.875rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
+}
+.mt-5 {
+  margin-top: 1.25rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -530,38 +571,97 @@ video {
 .grid {
   display: grid;
 }
-.h-40 {
-  height: 10rem;
+.h-10 {
+  height: 2.5rem;
 }
-.w-auto {
-  width: auto;
+.h-\[470\] {
+  height: 470;
+}
+.h-\[470px\] {
+  height: 470px;
+}
+.w-full {
+  width: 100%;
+}
+.w-\[456px\] {
+  width: 456px;
+}
+.w-\[362px\] {
+  width: 362px;
+}
+.max-w-5xl {
+  max-width: 64rem;
+}
+.border-spacing-2 {
+  --tw-border-spacing-x: 0.5rem;
+  --tw-border-spacing-y: 0.5rem;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
 }
 .cursor-pointer {
   cursor: pointer;
 }
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+.flex-row {
+  flex-direction: row;
+}
+.flex-col {
+  flex-direction: column;
+}
+.items-center {
+  align-items: center;
+}
+.justify-end {
+  justify-content: flex-end;
+}
+.justify-center {
+  justify-content: center;
 }
 .justify-between {
   justify-content: space-between;
 }
+.justify-items-center {
+  justify-items: center;
+}
+.gap-16 {
+  gap: 4rem;
+}
 .gap-2 {
   gap: 0.5rem;
+}
+.gap-8 {
+  gap: 2rem;
 }
 .gap-4 {
   gap: 1rem;
 }
-.border-2 {
-  border-width: 2px;
+.gap-6 {
+  gap: 1.5rem;
+}
+.border-\[1px\] {
+  border-width: 1px;
 }
 .border-solid {
   border-style: solid;
 }
-.bg-\[url\(\'\/\.\.\/images\/Background-Color\.svg\'\)\] {
-  background-image: url('/../images/Background-Color.svg');
+.border-\[\#3C88B5\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(60 136 181 / var(--tw-border-opacity));
+}
+.border-blue-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity));
+}
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'\.\.\/images\/Background-Color\.svg\'\)\] {
   background-image: url('../images/Background-Color.svg');
+}
+.bg-\[url\(\'\.\.\/items-bg-one\.svg\'\)\] {
+  background-image: url('../items-bg-one.svg');
+}
+.bg-\[url\(\'\.\.\/images\/items-bg-one\.svg\'\)\] {
+  background-image: url('../images/items-bg-one.svg');
 }
 .bg-cover {
   background-size: cover;
@@ -569,45 +669,242 @@ video {
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
-.p-4 {
-  padding: 1rem;
+.px-11 {
+  padding-left: 2.75rem;
+  padding-right: 2.75rem;
 }
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
-.font-sans {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.py-40 {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.pb-32 {
+  padding-bottom: 8rem;
+}
+.pl-\[108px\] {
+  padding-left: 108px;
+}
+.pl-\[157px\] {
+  padding-left: 157px;
+}
+.pl-7 {
+  padding-left: 1.75rem;
+}
+.pl-12 {
+  padding-left: 3rem;
+}
+.pt-16 {
+  padding-top: 4rem;
+}
+.pt-\[94px\] {
+  padding-top: 94px;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+.pt-2 {
+  padding-top: 0.5rem;
+}
+.pt-2\.5 {
+  padding-top: 0.625rem;
+}
+.pt-5 {
+  padding-top: 1.25rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
+}
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+.text-\[44px\] {
+  font-size: 44px;
+}
+.text-\[55px\] {
+  font-size: 55px;
+}
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .uppercase {
   text-transform: uppercase;
+}
+.leading-8 {
+  line-height: 2rem;
+}
+.leading-\[55px\] {
+  line-height: 55px;
+}
+.text-\[\#252D5A\] {
+  --tw-text-opacity: 1;
+  color: rgb(37 45 90 / var(--tw-text-opacity));
 }
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.underline {
+  text-decoration-line: underline;
+}
+
+.about-tvm-para {
+  margin-left: 81px;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  --tw-text-opacity: 1;
+  color: rgb(80 93 104 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+
+  .about-tvm-para {
+    width: 258px;
+  }
+}
+
+@media (min-width: 1280px) {
+
+  .about-tvm-para {
+    width: 258px;
+  }
+}
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
+
 @media (min-width: 640px) {
 
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .sm\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
+
+@media (min-width: 768px) {
+
+  .md\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 1024px) {
+
+  .lg\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .lg\:mr-\[250px\] {
+    margin-right: 250px;
+  }
+
+  .lg\:w-80 {
+    width: 20rem;
+  }
+
+  .lg\:w-\[360px\] {
+    width: 360px;
+  }
+
+  .lg\:w-\[555px\] {
+    width: 555px;
+  }
+
+  .lg\:w-\[458px\] {
+    width: 458px;
+  }
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
 }
+
 @media (min-width: 1280px) {
 
-  .xl\:grid-cols-3 {
+  .xl\:w-\[458px\] {
+    width: 458px;
+  }
+
+  .xl\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .\32xl\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .\32xl\:mr-\[250px\] {
+    margin-right: 250px;
+  }
+
+  .\32xl\:w-80 {
+    width: 20rem;
+  }
+
+  .\32xl\:w-\[555px\] {
+    width: 555px;
+  }
+
+  .\32xl\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .\32xl\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .\32xl\:flex-row {
+    flex-direction: row;
   }
 }
