--- a/public/output.css
+++ b/public/output.css
@@ -488,10 +488,10 @@ video {
 .container {
   width: 100%;
 }
-@media (min-width: 365px) {
+@media (min-width: 345px) {
 
   .container {
-    max-width: 365px;
+    max-width: 345px;
   }
 }
 @media (min-width: 640px) {
@@ -518,6 +518,15 @@ video {
     max-width: 1280px;
   }
 }
+.absolute {
+  position: absolute;
+}
+.left-\[-800px\] {
+  left: -800px;
+}
+.top-10 {
+  top: 2.5rem;
+}
 .m-auto {
   margin: auto;
 }
@@ -525,45 +534,31 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
 .my-\[81px\] {
   margin-top: 81px;
   margin-bottom: 81px;
 }
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
 .mb-6 {
   margin-bottom: 1.5rem;
-}
-.mt-10 {
-  margin-top: 2.5rem;
-}
-.mt-6 {
-  margin-top: 1.5rem;
-}
-.mt-8 {
-  margin-top: 2rem;
-}
-.mt-\[169px\] {
-  margin-top: 169px;
-}
-.mt-\[22px\] {
-  margin-top: 22px;
-}
-.mb-12 {
-  margin-bottom: 3rem;
-}
-.mb-\[37px\] {
-  margin-bottom: 37px;
 }
 .mb-9 {
   margin-bottom: 2.25rem;
 }
-.mt-9 {
-  margin-top: 2.25rem;
-}
 .mb-\[77px\] {
   margin-bottom: 77px;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.mt-10 {
+  margin-top: 2.5rem;
 }
 .mt-12 {
   margin-top: 3rem;
@@ -571,14 +566,20 @@ video {
 .mt-2 {
   margin-top: 0.5rem;
 }
-.mt-2\.5 {
-  margin-top: 0.625rem;
+.mt-5 {
+  margin-top: 1.25rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.mt-8 {
+  margin-top: 2rem;
+}
+.mt-\[22px\] {
+  margin-top: 22px;
 }
 .mt-\[30px\] {
   margin-top: 30px;
-}
-.mb-16 {
-  margin-bottom: 4rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -589,40 +590,32 @@ video {
 .grid {
   display: grid;
 }
-.h-10 {
-  height: 2.5rem;
+.hidden {
+  display: none;
 }
 .h-\[470px\] {
   height: 470px;
 }
-.w-\[362px\] {
-  width: 362px;
-}
-.w-\[456px\] {
-  width: 456px;
-}
-.w-full {
-  width: 100%;
+.w-\[265px\] {
+  width: 265px;
 }
 .w-\[283px\] {
   width: 283px;
 }
+.w-full {
+  width: 100%;
+}
 .max-w-5xl {
   max-width: 64rem;
-}
-.border-spacing-2 {
-  --tw-border-spacing-x: 0.5rem;
-  --tw-border-spacing-y: 0.5rem;
-  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
 }
 .cursor-pointer {
   cursor: pointer;
 }
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -648,17 +641,11 @@ video {
 .gap-16 {
   gap: 4rem;
 }
-.gap-2 {
-  gap: 0.5rem;
+.gap-3 {
+  gap: 0.75rem;
 }
 .gap-8 {
   gap: 2rem;
-}
-.gap-5 {
-  gap: 1.25rem;
-}
-.gap-6 {
-  gap: 1.5rem;
 }
 .gap-\[24px\] {
   gap: 24px;
@@ -669,58 +656,41 @@ video {
 .border-\[1px\] {
   border-width: 1px;
 }
-.border-4 {
-  border-width: 4px;
-}
 .border-b-2 {
   border-bottom-width: 2px;
-}
-.border-b {
-  border-bottom-width: 1px;
 }
 .border-b-\[1px\] {
   border-bottom-width: 1px;
 }
-.border-t-\[1px\] {
-  border-top-width: 1px;
-}
 .border-solid {
   border-style: solid;
-}
-.border-\[\#3C88B5\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(60 136 181 / var(--tw-border-opacity));
-}
-.border-blue-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(96 165 250 / var(--tw-border-opacity));
 }
 .border-\[\#252D5A\] {
   --tw-border-opacity: 1;
   border-color: rgb(37 45 90 / var(--tw-border-opacity));
 }
-.border-indigo-200 {
+.border-\[\#3C88B5\] {
   --tw-border-opacity: 1;
-  border-color: rgb(199 210 254 / var(--tw-border-opacity));
+  border-color: rgb(60 136 181 / var(--tw-border-opacity));
 }
-.border-b-indigo-500 {
+.border-b-\[\#252D5A\] {
   --tw-border-opacity: 1;
-  border-bottom-color: rgb(99 102 241 / var(--tw-border-opacity));
-}
-.border-b-\[1\] {
-  border-bottom-color: 1;
-}
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  border-bottom-color: rgb(37 45 90 / var(--tw-border-opacity));
 }
 .bg-\[\#252D5A\] {
   --tw-bg-opacity: 1;
   background-color: rgb(37 45 90 / var(--tw-bg-opacity));
+}
+.bg-dark-blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 27 41 / var(--tw-bg-opacity));
+}
+.bg-footer-bg {
+  background-color: #003048;;
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'\.\.\/images\/Background-Color\.svg\'\)\] {
   background-image: url('../images/Background-Color.svg');
@@ -731,11 +701,11 @@ video {
 .bg-cover {
   background-size: cover;
 }
+.bg-center {
+  background-position: center;
+}
 .bg-no-repeat {
   background-repeat: no-repeat;
-}
-.p-\[10px\] {
-  padding: 10px;
 }
 .px-11 {
   padding-left: 2.75rem;
@@ -745,6 +715,14 @@ video {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.px-\[38px\] {
+  padding-left: 38px;
+  padding-right: 38px;
+}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -753,25 +731,25 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.py-40 {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-}
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-.px-\[10px\] {
-  padding-left: 10px;
-  padding-right: 10px;
 }
 .py-\[31px\] {
   padding-top: 31px;
   padding-bottom: 31px;
 }
-.px-\[38px\] {
-  padding-left: 38px;
-  padding-right: 38px;
+.pb-11 {
+  padding-bottom: 2.75rem;
+}
+.pb-16 {
+  padding-bottom: 4rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+.pb-20 {
+  padding-bottom: 5rem;
 }
 .pb-32 {
   padding-bottom: 8rem;
@@ -779,8 +757,14 @@ video {
 .pb-4 {
   padding-bottom: 1rem;
 }
-.pl-12 {
-  padding-left: 3rem;
+.pb-\[54px\] {
+  padding-bottom: 54px;
+}
+.pl-6 {
+  padding-left: 1.5rem;
+}
+.pt-12 {
+  padding-top: 3rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -788,20 +772,17 @@ video {
 .pt-2\.5 {
   padding-top: 0.625rem;
 }
+.pt-20 {
+  padding-top: 5rem;
+}
+.pt-5 {
+  padding-top: 1.25rem;
+}
+.pt-8 {
+  padding-top: 2rem;
+}
 .pt-\[94px\] {
   padding-top: 94px;
-}
-.pb-\[54px\] {
-  padding-bottom: 54px;
-}
-.pt-12 {
-  padding-top: 3rem;
-}
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-.pb-16 {
-  padding-bottom: 4rem;
 }
 .text-center {
   text-align: center;
@@ -817,6 +798,9 @@ video {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+.text-\[12px\] {
+  font-size: 12px;
 }
 .text-\[38px\] {
   font-size: 38px;
@@ -835,13 +819,6 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-.text-\[12px\] {
-  font-size: 12px;
-}
 .uppercase {
   text-transform: uppercase;
 }
@@ -859,12 +836,24 @@ video {
   --tw-text-opacity: 1;
   color: rgb(80 93 104 / var(--tw-text-opacity));
 }
+.text-footer-font-color {
+  --tw-text-opacity: 1;
+  color: rgb(3 121 182 / var(--tw-text-opacity));
+}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
+}
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 .about-tvm-para {
@@ -891,6 +880,15 @@ video {
   }
 }
 
+.hover\:bg-blue-hover:hover {
+  background-color: rgba(3, 121, 182, 0.4);
+}
+
+.hover\:bg-sky-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+}
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -900,21 +898,19 @@ video {
   text-decoration-line: underline;
 }
 
-@media (min-width: 640px) {
-
-  .sm\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-}
-
-@media (min-width: 768px) {
-
-  .md\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-}
-
 @media (min-width: 1024px) {
+
+  .lg\:relative {
+    position: relative;
+  }
+
+  .lg\:left-0 {
+    left: 0px;
+  }
+
+  .lg\:top-0 {
+    top: 0px;
+  }
 
   .lg\:mb-4 {
     margin-bottom: 1rem;
@@ -924,12 +920,24 @@ video {
     margin-right: 250px;
   }
 
-  .lg\:w-80 {
-    width: 20rem;
+  .lg\:mt-\[169px\] {
+    margin-top: 169px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:w-\[360px\] {
     width: 360px;
+  }
+
+  .lg\:w-\[362px\] {
+    width: 362px;
   }
 
   .lg\:w-\[458px\] {
@@ -944,6 +952,10 @@ video {
     width: 944px;
   }
 
+  .lg\:w-auto {
+    width: auto;
+  }
+
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -955,6 +967,22 @@ video {
   .lg\:flex-row {
     flex-direction: row;
   }
+
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
+  }
+
+  .lg\:pl-12 {
+    padding-left: 3rem;
+  }
+
+  .lg\:transition-none {
+    transition-property: none;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -963,8 +991,16 @@ video {
     width: 458px;
   }
 
-  .xl\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .\32xl\:relative {
+    position: relative;
+  }
+
+  .\32xl\:left-0 {
+    left: 0px;
+  }
+
+  .\32xl\:top-0 {
+    top: 0px;
   }
 
   .\32xl\:mb-4 {
@@ -975,8 +1011,16 @@ video {
     margin-right: 250px;
   }
 
-  .\32xl\:w-80 {
-    width: 20rem;
+  .\32xl\:mt-\[169px\] {
+    margin-top: 169px;
+  }
+
+  .\32xl\:block {
+    display: block;
+  }
+
+  .\32xl\:w-\[362px\] {
+    width: 362px;
   }
 
   .\32xl\:w-\[555px\] {
@@ -985,6 +1029,10 @@ video {
 
   .\32xl\:w-\[944px\] {
     width: 944px;
+  }
+
+  .\32xl\:w-auto {
+    width: auto;
   }
 
   .\32xl\:grid-cols-2 {
@@ -997,5 +1045,21 @@ video {
 
   .\32xl\:flex-row {
     flex-direction: row;
+  }
+
+  .\32xl\:items-start {
+    align-items: flex-start;
+  }
+
+  .\32xl\:justify-between {
+    justify-content: space-between;
+  }
+
+  .\32xl\:pl-12 {
+    padding-left: 3rem;
+  }
+
+  .\32xl\:transition-none {
+    transition-property: none;
   }
 }
