--- a/public/output.css
+++ b/public/output.css
@@ -518,14 +518,20 @@ video {
     max-width: 1280px;
   }
 }
-.absolute {
-  position: absolute;
+.fixed {
+  position: fixed;
 }
-.left-\[-800px\] {
-  left: -800px;
+.relative {
+  position: relative;
 }
-.top-10 {
-  top: 2.5rem;
+.right-\[-250px\] {
+  right: -250px;
+}
+.top-0 {
+  top: 0px;
+}
+.z-\[999\] {
+  z-index: 999;
 }
 .m-auto {
   margin: auto;
@@ -566,9 +572,6 @@ video {
 .mt-2 {
   margin-top: 0.5rem;
 }
-.mt-5 {
-  margin-top: 1.25rem;
-}
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -596,11 +599,23 @@ video {
 .h-\[470px\] {
   height: 470px;
 }
+.h-\[500px\] {
+  height: 500px;
+}
+.h-screen {
+  height: 100vh;
+}
+.w-\[175px\] {
+  width: 175px;
+}
 .w-\[265px\] {
   width: 265px;
 }
 .w-\[283px\] {
   width: 283px;
+}
+.w-\[500px\] {
+  width: 500px;
 }
 .w-full {
   width: 100%;
@@ -622,6 +637,9 @@ video {
 }
 .flex-wrap {
   flex-wrap: wrap;
+}
+.items-end {
+  align-items: flex-end;
 }
 .items-center {
   align-items: center;
@@ -681,6 +699,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(37 45 90 / var(--tw-bg-opacity));
 }
+.bg-click-me {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 255 / var(--tw-bg-opacity));
+}
 .bg-dark-blue {
   --tw-bg-opacity: 1;
   background-color: rgb(0 27 41 / var(--tw-bg-opacity));
@@ -691,6 +713,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-yellow-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'\.\.\/images\/Background-Color\.svg\'\)\] {
   background-image: url('../images/Background-Color.svg');
@@ -707,6 +733,9 @@ video {
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
+.p-5 {
+  padding: 1.25rem;
+}
 .px-11 {
   padding-left: 2.75rem;
   padding-right: 2.75rem;
@@ -715,6 +744,10 @@ video {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .px-\[10px\] {
   padding-left: 10px;
   padding-right: 10px;
@@ -722,6 +755,10 @@ video {
 .px-\[38px\] {
   padding-left: 38px;
   padding-right: 38px;
+}
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -836,6 +873,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(80 93 104 / var(--tw-text-opacity));
 }
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
 .text-footer-font-color {
   --tw-text-opacity: 1;
   color: rgb(3 121 182 / var(--tw-text-opacity));
@@ -879,37 +920,63 @@ video {
     width: 258px;
   }
 }
+#check:checked~ul {
+    right: 0;
+}
+.header-fixed {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+}
+@keyframes smoothScroll {
 
+  0% {
+    transform: translateY(-40px);
+  }
+
+  100% {
+    transform:  translateY(0px);
+  }
+}
+.header-fixed {
+  animation: smoothScroll 0.5s forwards;;
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 48 72 / var(--tw-bg-opacity));
+}
 .hover\:bg-blue-hover:hover {
   background-color: rgba(3, 121, 182, 0.4);
 }
-
 .hover\:bg-sky-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
 }
-
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
+@media (prefers-color-scheme: dark) {
 
+  .dark\:bg-dark-blue {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 27 41 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-dark-click-me {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  }
+}
 @media (min-width: 1024px) {
 
   .lg\:relative {
     position: relative;
   }
 
-  .lg\:left-0 {
-    left: 0px;
-  }
-
-  .lg\:top-0 {
-    top: 0px;
+  .lg\:right-0 {
+    right: 0px;
   }
 
   .lg\:mb-4 {
@@ -920,16 +987,16 @@ video {
     margin-right: 250px;
   }
 
-  .lg\:mt-\[169px\] {
-    margin-top: 169px;
-  }
-
   .lg\:block {
     display: block;
   }
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:w-\[360px\] {
@@ -976,15 +1043,37 @@ video {
     justify-content: space-between;
   }
 
+  .lg\:bg-transparent {
+    background-color: transparent;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .lg\:pl-12 {
     padding-left: 3rem;
+  }
+
+  .lg\:pt-\[169px\] {
+    padding-top: 169px;
+  }
+
+  .lg\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .lg\:transition-none {
     transition-property: none;
   }
 }
-
 @media (min-width: 1280px) {
 
   .xl\:w-\[458px\] {
@@ -995,12 +1084,8 @@ video {
     position: relative;
   }
 
-  .\32xl\:left-0 {
-    left: 0px;
-  }
-
-  .\32xl\:top-0 {
-    top: 0px;
+  .\32xl\:right-0 {
+    right: 0px;
   }
 
   .\32xl\:mb-4 {
@@ -1011,12 +1096,12 @@ video {
     margin-right: 250px;
   }
 
-  .\32xl\:mt-\[169px\] {
-    margin-top: 169px;
-  }
-
   .\32xl\:block {
     display: block;
+  }
+
+  .\32xl\:h-auto {
+    height: auto;
   }
 
   .\32xl\:w-\[362px\] {
@@ -1055,8 +1140,31 @@ video {
     justify-content: space-between;
   }
 
+  .\32xl\:bg-transparent {
+    background-color: transparent;
+  }
+
+  .\32xl\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .\32xl\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .\32xl\:pl-12 {
     padding-left: 3rem;
+  }
+
+  .\32xl\:pt-\[169px\] {
+    padding-top: 169px;
+  }
+
+  .\32xl\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .\32xl\:transition-none {
